***********************************
CHANGES IN VERSION 2.1

NEW FEATURES
   o Remove file conversion sam to .aln
   o Additional filters on MAPQ
   o Additional check to discard invalid reads pair

***********************************
CHANGES IN VERSION 2.0

NEW FEATURES
   o Major release by E. Viara
   o New parallelized version of the pipeline. The workflow is parallelized by read pairs from the alignment, to the list of valid interactions
   o New version of build_matrix tool written in C++

***********************************
CHANGES IN VERSION 1.0

NEW FEATURES
   o First version of the pipeline
