@@ -2,9 +2,13 @@
 CHANGES IN VERSION 2.1
 
 NEW FEATURES
+   o Check cutSite for local mapped reads (mergeSAM.pl)
+   o New output option for overlapMapped2HiCFragment.py --samOutput
+   o Change read position used for fragment overlap (middle instead of 5' end to avoid cutting site sequencing)
+
    o Remove file conversion sam to .aln
-   o Additional filters on MAPQ
-   o Additional check to discard invalid reads pair
+   o Additional filters on MAPQ (mergeSAM.pl)
+   o Additional check to discard invalid reads pair (mergeSAM.pl)
 
 ***********************************
 CHANGES IN VERSION 2.0
